@@ -3,20 +3,17 @@ package com.jishop.product.service;
 import com.jishop.common.exception.DomainException;
 import com.jishop.common.exception.ErrorType;
 import com.jishop.member.domain.User;
+import com.jishop.option.dto.FashionClothesOptionResponse;
+import com.jishop.option.dto.GeneralOptionResponse;
 import com.jishop.product.domain.Product;
-import com.jishop.product.domain.QProduct;
 import com.jishop.product.dto.request.ProductRequest;
 import com.jishop.product.dto.response.ProductListResponse;
 import com.jishop.product.dto.response.ProductResponse;
-import com.jishop.product.implementation.ProductQueryHelper;
 import com.jishop.product.repository.ProductRepository;
-import com.jishop.product.repository.ProductRepositoryQueryDsl;
 import com.jishop.productwishlist.repository.ProductWishListRepository;
-import com.jishop.reviewproduct.domain.QReviewProduct;
 import com.jishop.reviewproduct.domain.ReviewProduct;
 import com.jishop.reviewproduct.repository.ReviewProductRepository;
-import com.querydsl.core.BooleanBuilder;
-import com.querydsl.core.types.OrderSpecifier;
+import com.jishop.saleproduct.repository.SaleProductRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -27,7 +24,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @Service
 @RequiredArgsConstructor
@@ -36,69 +33,57 @@ public class ProductServiceImpl implements ProductService {
 
     private final ProductRepository productRepository;
     private final ReviewProductRepository reviewProductRepository;
-    private final ProductQueryHelper productQueryHelper;
-    private final ProductRepositoryQueryDsl productRepositoryQueryDsl;
     private final ProductWishListRepository productWishListRepository;
+    private final SaleProductRepository saleProductRepository;
 
     @Override
-    public PagedModel<ProductListResponse> getProductList(ProductRequest productRequest, int page, int size) {
-        BooleanBuilder filterBuilder = productQueryHelper
-                .findProductsByCondition(productRequest, QProduct.product, QReviewProduct.reviewProduct);
+    public PagedModel<ProductListResponse> getProductList(final ProductRequest productRequest,
+                                                          final int page, final int size) {
+        final List<Product> targetedProducts = productRepository.findProductsByCondition(productRequest, page, size);
+        final List<ProductListResponse> productList = targetedProducts.stream()
+                .map(ProductListResponse::from).toList();
 
-        OrderSpecifier<?> orderSpecifier = addSorting(productRequest.sort(), QProduct.product);
-
-        List<Product> results = productRepositoryQueryDsl
-                .getFilteredAndSortedResults(filterBuilder, orderSpecifier, productRequest, page, size);
-
-        List<ProductListResponse> productList = results.stream()
-                .map(ProductListResponse::from).collect(Collectors.toList());
-
-        long totalCount = productRepositoryQueryDsl.countFilteredProducts(filterBuilder);
-
-        Pageable pageable = PageRequest.of(page, size);
-        Page<ProductListResponse> ProductListResponsePage = new PageImpl<>(productList, pageable, totalCount);
+        final long totalCount = productRepository.countProductsByCondition(productRequest);
+        final Pageable pageable = PageRequest.of(page, size);
+        final Page<ProductListResponse> ProductListResponsePage = new PageImpl<>(productList, pageable, totalCount);
 
         return new PagedModel<>(ProductListResponsePage);
     }
 
     @Override
-    public ProductResponse getProduct(User user, Long id) {
-        Product product = productRepository.findById(id)
+    public ProductResponse getProduct(final User user, final Long productId) {
+        final Product product = productRepository.findById(productId)
                 .orElseThrow(() -> new DomainException(ErrorType.PRODUCT_NOT_FOUND));
 
-        Boolean isWished = false;
-        if (user != null) {
-            isWished = productRepository.findProductWishStatusByUserAndProduct(user, product).orElse(false);
+        // 찜 상태
+        final boolean isWished = (user != null) && productWishListRepository
+                .isProductWishedByUser(user.getId(), productId);
+
+        // 상품 옵션
+        final Long categoryType = product.getLCatId();
+        final Object productsOptions;
+        if (categoryType == 50000000L) {
+            final List<Map<String, Object>> fashionClothesOptions = saleProductRepository
+                    .findFashionClothesOptionsByProductId(productId);
+            productsOptions = FashionClothesOptionResponse.from(fashionClothesOptions);
+        } else {
+            final List<Map<String, Object>> generalOptions = saleProductRepository
+                    .findGeneralOptionsByProductId(productId);
+            productsOptions = GeneralOptionResponse.from(generalOptions);
         }
 
-        ReviewProduct reviewProduct = reviewProductRepository.findByProduct(product).orElse(null);
+        // 상품 리뷰
+        final List<ReviewProduct> productsReviews = reviewProductRepository.findAllByProduct(product);
+        final int reviewCount = productsReviews.isEmpty() ? 0 : productsReviews.get(0).getReviewCount();
+        final double reviewRate = productsReviews.isEmpty() ? 0.0 : productsReviews.get(0).getAverageRating();
 
-        int reviewCount = 0;
-        double reviewRate = 0.0;
-
-        if (reviewProduct != null) {
-            reviewCount = reviewProduct.getReviewCount();
-            reviewRate = reviewProduct.getAverageRating();
-        }
-
-        return ProductResponse.from(product, isWished, reviewCount, reviewRate);
+        return ProductResponse.from(product, isWished, reviewCount, reviewRate, productsOptions);
     }
 
     @Override
     public List<ProductListResponse> getProductByWishTopTen() {
-        List<Product> products = productWishListRepository.getProductByWishTopTen();
+        final List<Product> products = productWishListRepository.getProductByWishTopTen();
 
-        return products.stream().map(ProductListResponse::from).collect(Collectors.toList());
-    }
-
-    private OrderSpecifier<?> addSorting(String sort, QProduct product) {
-        return switch (sort) {
-            case "wish" -> product.wishListCount.desc();
-            case "latest" -> product.createdAt.desc();
-            case "priceAsc" -> product.discountPrice.asc();
-            case "priceDesc" -> product.discountPrice.desc();
-            case "discount" -> product.discountRate.desc();
-            default -> product.wishListCount.desc();
-        };
+        return products.stream().map(ProductListResponse::from).toList();
     }
 }
